kubernetes/Namespace.yml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "weather-app",
    "labels": {
      "name": "weathe-app"
    }
  }
}
