kubernetes/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app-ingress
  namespace: weather-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - weather-app.e00abd18-7e4a-4c2b-aabd-7f892e490a32.k8s.civo.com
      secretName: weather-app-tls
  rules:
    - host: weather-app.e00abd18-7e4a-4c2b-aabd-7f892e490a32.k8s.civo.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: weather-app-service
                port:
                  number: 80
